# skill-sentinel

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  report_example.json
src/skill_scanner/: __init__.py  cli.py  crew.py  main.py
src/skill_scanner/config/: agents.yaml
src/skill_scanner/data/: threat_categories.md
src/skill_scanner/tools/: __init__.py
src/skill_sentinel/: __init__.py  cli.py  crew.py  main.py
src/skill_sentinel/config/: tasks.yaml
src/skill_sentinel/data/: report_schema.json  threat_categories.md
src/skill_sentinel/tools/: __init__.py  custom_tool.py  file_discovery.py  virustotal_tool.py
